force-app/main/default/objects/CRM_to_EBOT_Event__e/CRM_to_EBOT_Event__e.object-meta.xml
<CustomObject>
    <description>This Platform Event will be used to send Parameters to Ebot for case classification.</description>
    <label>CRM to EBOT Event</label>
    <pluralLabel>CRM to EBOT Events</pluralLabel>
</CustomObject>