force-app/main/default/objects/CRM_to_EBOT_Event__e/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <label>Additional Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>