force-app/main/default/objects/CRM_to_EBOT_Event__e/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>