force-app/main/default/objects/CRM_to_EBOT_Event__e/fields/Case_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Integration_ID__c</fullName>
    <label>Case Integration ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>