force-app/main/default/objects/CRM_to_EBOT_Event__e/fields/File_Names__c.field-meta.xml
<CustomField>
    <fullName>File_Names__c</fullName>
    <label>File Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>