force-app/main/default/objects/CRM_to_EBOT_Event__e/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>