force-app/main/default/objects/CRM_to_EBOT_Event__e/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <length>50</length>
    <type>Text</type>
</CustomField>