force-app/main/default/objects/CRM_to_EBOT_Event__e/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>